# ChangeLog for net-p2p/rtorrent
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.107 2008/04/21 15:08:51 flameeyes Exp $

  21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/rtorrent-0.8.0+gcc-4.3.patch, rtorrent-0.8.0.ebuild:
  Add patch by Philipp to build with GCC 4.3 (bug #212833).

*rtorrent-0.8.0 (01 Mar 2008)

  01 Mar 2008; Timothy Redaelli <drizzt@gentoo.org> +rtorrent-0.8.0.ebuild:
  Version Bump wrt bug #209361
  Add ipv6 use flag wrt bug #207581

  06 Feb 2008; nixnut <nixnut@gentoo.org> rtorrent-0.7.9.ebuild:
  stable on ppc wrt bug #209140

  06 Feb 2008; Christoph Mende <angelos@gentoo.org> rtorrent-0.7.9.ebuild:
  Stable on amd64, bug #209140

  06 Feb 2008; Raúl Porcel <armin76@gentoo.org> -rtorrent-0.7.1.ebuild,
  -rtorrent-0.7.2.ebuild, -rtorrent-0.7.3.ebuild, -rtorrent-0.7.4.ebuild,
  rtorrent-0.7.9.ebuild:
  x86 stable, remove old

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> rtorrent-0.7.9.ebuild:
  Stable on ppc64

  10 Jan 2008; Guy Martin <gmsoft@gentoo.org> rtorrent-0.7.9.ebuild:
  Added hppa to KEYWORDS.

  06 Jan 2008; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.9.ebuild:
  Add xmlrpc use flag, please test and report.
  Bug #182816

  13 Nov 2007; Samuli Suominen <drac@gentoo.org> rtorrent-0.7.8.ebuild:
  amd64 stable wrt #198558, thanks to Angelo Arrifano for testing.

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org> rtorrent-0.7.9.ebuild:
  Add ~ia64 wrt #198844

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> rtorrent-0.7.8.ebuild:
  Stable on ppc64; bug #198558

  09 Nov 2007; nixnut <nixnut@gentoo.org> rtorrent-0.7.8.ebuild:
  Stable on ppc wrt bug 198558

  09 Nov 2007; Dawid Węgliński <cla@gentoo.org> rtorrent-0.7.8.ebuild:
  Stable on x86 (bug #198558)

*rtorrent-0.7.9 (25 Oct 2007)

  25 Oct 2007; Timothy Redaelli <drizzt@gentoo.org> +rtorrent-0.7.9.ebuild:
  Version bump, thanks to Flameeyes for poking me.
